[gd_scene load_steps=5 format=3 uid="uid://c15ty4b1m5rr7"]

[ext_resource type="Script" uid="uid://egkbhy0l1go5" path="res://Menu.gd" id="1_v2lfg"]
[ext_resource type="Shader" uid="uid://cr0sgxwsmghke" path="res://asset/Player_fix/CRT.gdshader" id="2_tg4cr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_37rai"]
shader = ExtResource("2_tg4cr")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_v2lfg"]

[node name="Pausemenu" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_v2lfg")

[node name="ColorRect2" type="ColorRect" parent="."]
visibility_layer = 0
material = SubResource("ShaderMaterial_37rai")
offset_right = 1151.0
offset_bottom = 651.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219501, 0.219501, 0.219501, 0.894118)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -33.0
offset_right = 259.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="exit" type="Button" parent="PanelContainer/VBoxContainer"]
material = SubResource("CanvasItemMaterial_v2lfg")
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
